First full version of semester's work

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -84,17 +84,17 @@
 @misc{CMSslice,
   author = {David Barney},
   title = {{CMS slice (July 2010 version)}},
-  howpublished = {<\url{http://ippog.org/resources/2011/cms-slice-july-2010-version}> [žiūr.\ 2018-05-15]}
+  howpublished = {<\url{http://ippog.org/resources/2011/cms-slice-july-2010-version}> [žiūr.\ 2019-01-16]}
 }
 
 @misc{LHCexperiments,
   title = {{LHC experiments}},
-  howpublished = {<\url{https://home.cern/about/experiments}> [žiūr.\ 2018-05-15]}
+  howpublished = {<\url{https://home.cern/science/experiments}> [žiūr.\ 2018-01-16]}
 }
 
 @misc{aboutCMS,
   title = {{CMS}},
-  howpublished = {<\url{https://home.cern/about/experiments/cms}> [žiūr. 2018-05-15]}
+  howpublished = {<\url{https://home.cern/science/experiments/cms}> [žiūr. 2018-01-16]}
 }
 
 @misc{CMSdetector,
@@ -114,7 +114,7 @@
 
 @misc{Hcal,
   title = {{Energy of Hadrons (HCAL)}},
-  howpublished = {<\url{https://cms.cern/detector/measuring-energy/energy-hadrons-hcal}> [žiūr.\ 2018-05-15]}
+  howpublished = {<\url{https://cms.cern/detector/measuring-energy/energy-hadrons-hcal}> [žiūr.\ 2018-12-21]}
 }
 
 @misc{Solenoid,
@@ -173,14 +173,14 @@
 }  
 
 @misc{DYpic,
-  author  = {CMS Collaboration},
+  author  = {The CMS Collaboration},
   title   = {{Measurements of differential and double-differential Drell-Yan cross sections in proton-proton collisions at $8$ TeV}},
   year    = {2014},
   howpublished = {CMS-PAS-SMP-14-003}
 }
 
 @misc{FakeRateZ,
-  author  = {ATLAS Collaboration},
+  author  = {The ATLAS Collaboration},
   title   = {{Measurement of isolated-photon pair production in pp collisions at $\sqrt{s} = 7$ TeV with the ATLAS detector}},
   year    = {2013},
   howpublished = {JHEP 1301 086, DOI: 10.1007/JHEP01(2013)086}
@@ -207,7 +207,7 @@
   author  = {Matthew Jones, David Silvers},
   title   = {{Angular Distributions of Muons from Drell-Yan production}},
   year    = {2013},
-  howpublished = {CMS AN-13-180, CERN CMS vidinis dokumentas}
+  howpublished = {CMS AN-13-180, CERN CMS eksperimento vidinis dokumentas}
 }
 
 @misc{DYoriginal,
@@ -218,7 +218,7 @@
 }
 
 @misc{PF2017,
-  author  = {CMS Collaboration},
+  author  = {The CMS Collaboration},
   title   = {{Particle-flow reconstruction and global event description with the CMS detector}},
   year    = {2017},
   howpublished = {JINST 12 P10003, DOI: 10.1088/1748-0221/12/10/P10003}
@@ -228,33 +228,26 @@
   author  = {Ringailė Plačakytė},
   title   = {{Parton Distribution Functions}},
   year    = {2011},
-  howpublished = {arXiv:1111.5452 [hep-ph]}
+  howpublished = {Proceedings, PIC 2011, arXiv:1111.5452 [hep-ph]}
 }
 
-@inproceedings{Placakyte:2011az,
-      author         = "Placakyte, Ringaile",
-      title          = "{Parton Distribution Functions}",
-      booktitle      = {{Proceedings, PIC 2011: Vancouver, Canada, August
-                        28-September 1, 2011}},
-      year           = "2011",
-      eprint         = "1111.5452",
-      archivePrefix  = "arXiv",
-      primaryClass   = "hep-ph",
-      SLACcitation   = "%%CITATION = ARXIV:1111.5452;%%"
+@misc{HiggsEx,
+  author  = {Georges Aad et al. (ATLAS Collaboration)},
+  title   = {{Measurement of the Higgs boson mass from the $H\ensuremath{\rightarrow}\ensuremath{\gamma}\ensuremath{\gamma}$ and $H\ensuremath{\rightarrow}Z{Z}^{*}\ensuremath{\rightarrow}4\ensuremath{\ell}$ channels in $pp$ collisions at center-of-mass energies of 7 and 8 TeV with the ATLAS detector}},
+  year    = {2014},
+  howpublished = {Phys. Rev. D 90 052004, DOI: 10.1103/PhysRevD.90.052004}
 }
 
-@article{HiggsEX,
-  title = {Measurement of the Higgs boson mass from the $H\ensuremath{\rightarrow}\ensuremath{\gamma}\ensuremath{\gamma}$ and $H\ensuremath{\rightarrow}Z{Z}^{*}\ensuremath{\rightarrow}4\ensuremath{\ell}$ channels in $pp$ collisions at center-of-mass energies of 7 and 8 TeV with the ATLAS detector},
-  author = {Aad et al. (ATLAS Collaboration), G.},
-  collaboration = {ATLAS Collaboration},
-  journal = {Phys. Rev. D},
-  volume = {90},
-  issue = {5},
-  pages = {052004},
-  numpages = {35},
-  year = {2014},
-  month = {Sep},
-  publisher = {American Physical Society},
-  doi = {10.1103/PhysRevD.90.052004},
-  url = {https://link.aps.org/doi/10.1103/PhysRevD.90.052004}
+@misc{ECALtrig,
+  author  = {Prasanna Kumar Siddireddy},
+  title   = {{The CMS ECAL Trigger and DAQ system: electronics auto-recovery and monitoring}},
+  year    = {2018},
+  howpublished = {CMS CR -2018/084, arXiv:1806.09136 [physics.ins-det]}
+}
+
+@misc{CMSexperiment,
+  author  = {The CMS Collaboration},
+  title   = {{The CMS experiment at the CERN LHC}},
+  howpublished = {JINST 3 S08004},
+  year    = {2008}
 }
