More edits for semester's work

--- a/Doc/KursinisDarbas.bib
+++ b/Doc/KursinisDarbas.bib
@@ -1,7 +1,7 @@
 @misc{Poisson,
-  author = {Sylvain Veilleux},
+  author = {{Sylvain Veilleux}},
   title  = {{Observational astronomy: 1. Some Statistical Basics}},
-  howpublished    = {University of Maryland, Department of Astronomy. Fall 2006, ASTR310. <\url{http://www.astro.umd.edu/~veilleux/ASTR310/fall06/statis.pdf}>" [žiūr.\ 2018-05-15]}
+  howpublished    = {University of Maryland, Department of Astronomy. Fall 2006, ASTR310. <\url{http://www.astro.umd.edu/~veilleux/ASTR310/fall06/statis.pdf}>" [žiūr.\ 2019-01-22]}
 }
 
 @misc{PoisStat,
@@ -13,21 +13,21 @@
   author = {{Torbjörn Sjöstrand, Stephen Mrenna, Peter Skands}},
   title  = {{A Brief Introduction to PYTHIA 8.1}},
   year   = {2008},
-  howpublished    = {Comput. Phys. Commun. 178:852-867, DOI: 10.1016/j.cpc.2008.01.036}
+  howpublished    = {Comput. Phys. Commun. 178:852-867}
 }
 
 @misc{pythia82,
   author = {{Torbjörn Sjöstrand, Stefan Ask, Jesper R. Christianse et al.}},
   title  = {{An Introduction to PYTHIA 8.2}},
   year   = {2015},
-  howpublished = {Comput. Phys. Commun. 191:159-177, DOI: 10.1016/j.cpc.2015.01.024}
+  howpublished = {Comput. Phys. Commun. 191:159-177}
 }
 
 @misc{fewz,
   author = {{Ryan Gavin, Ye Li, Frank Petriello, Seth Quackenbush}},
   title  = {{FEWZ 2.0: A code for hadronic Z production at next-to-next-to-leading order}},
   year   = {2011},
-  howpublished    = {Comput. Phys. Commun. 182:2388-2403, DOI: 10.1016/j.cpc.2011.06.008}
+  howpublished    = {Comput. Phys. Commun. 182:2388-2403}
 }
 
 @misc{cmsswtwiki,
@@ -41,7 +41,7 @@
 }
 
 @misc{pflowpdf,
-  author  = {The CMS collaboration},
+  author  = {{The CMS collaboration}},
   title   = {{Particle–Flow Event Reconstruction in CMS and Performance for Jets, Taus, and Missing Transverse Energy}},
   year    = {2009},
   howpublished  = {CMS-PAS-PFT-09-001}
@@ -49,52 +49,52 @@
 
 
 @misc{HLtrigger,
-  author  = {Valentina Gori},
+  author  = {{Valentina Gori}},
   title   = {{The CMS High Level Trigger}},
   year    = {2014},
-  howpublished = {Int. J. Mod. Phys. Conf. Ser. 31 1460297, DOI: 10.1142/S201019451460297X}
+  howpublished = {Int. J. Mod. Phys. Conf. Ser. 31 1460297}
 }
 
 @misc{L1trigger,
-  author  = {Jim Brooke},
+  author  = {{Jim Brooke}},
   title   = {{Performance of the CMS Level-1 Trigger}},
   year    = {2013},
   howpublished = {PoS ICHEP2012 508}
 }
 
 @misc{pseudorapidity,
-  author  = {Ed Daw},
+  author  = {{Ed Daw}},
   title   = {{Lecture 7 -- Rapidity and pseudorapidity}},
   howpublished = {<\url{http://www.hep.shef.ac.uk/edaw/PHY206/Site/2012\_course\_files/phy206rlec7.pdf}> [žiūr.\ 2018-05-14]}
 }
 
 @misc{cmseta,
-  author  = {Marcus Friedl},
+  author  = {{Marcus Friedl}},
   title   = {{CMS Detector Layout}},
   howpublished    = {<\url{http://www.hephy.at/user/friedl/diss/html/node8.html}> [žiūr.\ 2018-05-10]}
 }
 
 @misc{DY13TeV,
-  author = {CMS Collaboration},
+  author = {{The CMS Collaboration}},
   title = {{Measurement of differential Drell-Yan cross section in proton-proton collisions at 13 TeV}},
   year = {2016},
   howpublished = {CMS-PAS-SMP-16-009}
 }
 
 @misc{CMSslice,
-  author = {David Barney},
+  author = {{David Barney}},
   title = {{CMS slice (July 2010 version)}},
   howpublished = {<\url{http://ippog.org/resources/2011/cms-slice-july-2010-version}> [žiūr.\ 2019-01-16]}
 }
 
 @misc{LHCexperiments,
   title = {{LHC experiments}},
-  howpublished = {<\url{https://home.cern/science/experiments}> [žiūr.\ 2018-01-16]}
+  howpublished = {<\url{https://home.cern/science/experiments}> [žiūr.\ 2019-01-16]}
 }
 
 @misc{aboutCMS,
   title = {{CMS}},
-  howpublished = {<\url{https://home.cern/science/experiments/cms}> [žiūr. 2018-01-16]}
+  howpublished = {<\url{https://home.cern/science/experiments/cms}> [žiūr. 2019-01-16]}
 }
 
 @misc{CMSdetector,
@@ -134,17 +134,17 @@
 }
 
 @misc{TightMuon,
-  author  = {The CMS Collaboration},
+  author  = {{The CMS Collaboration}},
   title   = {{Performance of the CMS muon detector and muon reconstruction with proton-proton collisions at $\sqrt{s} = 13$ TeV}},
   year    = {2018},
   howpublished = {CMS-MUO-16-001}
 }
 
 @misc{MediumID8,
-  author  = {The CMS Collaboration},
+  author  = {{The CMS Collaboration}},
   title   = {{Performance of electron reconstruction and selection with the CMS detector in proton-proton collisions at $\sqrt{s}= 8$ TeV}},
   year    = {2015},
-  howpublished = {JINST 10 P06005, DOI: 10.1088/1748-0221/10/06/P06005}
+  howpublished = {JINST 10 P06005}
 }
 
 @misc{MediumID2015,
@@ -156,41 +156,41 @@
   author  = {{Stefano Forte, Graeme Watt}},
   title   = {{Progress in the Determination of the Partonic Structure of the Proton}},
   year    = {2013},
-  howpublished = {Annu. Rev. Nucl. Part. Sci. 63 291-328, DOI: 10.1146/annurev-nucl-102212-170607}
+  howpublished = {Annu. Rev. Nucl. Part. Sci. 63 291-328}
 }
 
 @misc{PDFintro,
   author  = {{Jo\"el Feltesse}},
   title   = {{Introduction to Parton Distribution Functions}},
-  howpublished = {Scholarpedia, 5(11):10160, DOI: 10.4249/scholarpedia.10160}
+  howpublished = {Scholarpedia, 5(11):10160}
 }
 
 @misc{NNPDF,
   author  = {{The NNPDF Collaboration}},
   title   = {{Parton distributions from high-precision collider data}},
   year    = {2017},
-  howpublished = {Eur.Phys.J. C77 no.10, 663, DOI: 10.1140/epjc/s10052-017-5199-5}
+  howpublished = {Eur.Phys.J. C77 no.10, 663}
 }  
 
 @misc{DYpic,
-  author  = {The CMS Collaboration},
+  author  = {{The CMS Collaboration}},
   title   = {{Measurements of differential and double-differential Drell-Yan cross sections in proton-proton collisions at $8$ TeV}},
   year    = {2014},
   howpublished = {CMS-PAS-SMP-14-003}
 }
 
 @misc{FakeRateZ,
-  author  = {The ATLAS Collaboration},
+  author  = {{The ATLAS Collaboration}},
   title   = {{Measurement of isolated-photon pair production in pp collisions at $\sqrt{s} = 7$ TeV with the ATLAS detector}},
   year    = {2013},
-  howpublished = {JHEP 1301 086, DOI: 10.1007/JHEP01(2013)086}
+  howpublished = {JHEP 1301 086}
 }
 
 @misc{geant4,
   author  = {{Stefano Agostinelli, John Allison et al.}},
   title   = {{GEANT4 -- a simulation toolkit}},
   year    = {2003},
-  howpublished = {Nuclear Instruments and Methods in Physics Research A 506 250–303, DOI: 10.1016/S0168-9002(03)01368-8}
+  howpublished = {Nuclear Instruments and Methods in Physics Research A 506 250–303}
 }
 
 @misc{amcatnlo,
@@ -204,7 +204,7 @@
 }
 
 @misc{AN2013,
-  author  = {Matthew Jones, David Silvers},
+  author  = {{Matthew Jones, David Silvers}},
   title   = {{Angular Distributions of Muons from Drell-Yan production}},
   year    = {2013},
   howpublished = {CMS AN-13-180, CERN CMS eksperimento vidinis dokumentas}
@@ -214,35 +214,35 @@
   author  = {{Sidney David Drell, Tung-Mow Yan}},
   title   = {{Massive Lepton Pair Production in Hadron-Hadron Collisions at High-Energies}},
   year    = {1970},
-  howpublished = {Phys. Rev. Lett. 25 316-320, DOI: 10.1103/PhysRevLett.25.316}
+  howpublished = {Phys. Rev. Lett. 25 316-320}
 }
 
 @misc{PF2017,
-  author  = {The CMS Collaboration},
+  author  = {{The CMS Collaboration}},
   title   = {{Particle-flow reconstruction and global event description with the CMS detector}},
   year    = {2017},
-  howpublished = {JINST 12 P10003, DOI: 10.1088/1748-0221/12/10/P10003}
+  howpublished = {JINST 12 P10003}
 }
 
 @misc{PDF0,
   author  = {Ringailė Plačakytė},
   title   = {{Parton Distribution Functions}},
   year    = {2011},
-  howpublished = {Proceedings, PIC 2011, arXiv:1111.5452 [hep-ph]}
+  howpublished = {Proceedings, PIC 2011}
 }
 
 @misc{HiggsEx,
   author  = {Georges Aad et al. (ATLAS Collaboration)},
   title   = {{Measurement of the Higgs boson mass from the $H\ensuremath{\rightarrow}\ensuremath{\gamma}\ensuremath{\gamma}$ and $H\ensuremath{\rightarrow}Z{Z}^{*}\ensuremath{\rightarrow}4\ensuremath{\ell}$ channels in $pp$ collisions at center-of-mass energies of 7 and 8 TeV with the ATLAS detector}},
   year    = {2014},
-  howpublished = {Phys. Rev. D 90 052004, DOI: 10.1103/PhysRevD.90.052004}
+  howpublished = {Phys. Rev. D 90 052004}
 }
 
 @misc{ECALtrig,
   author  = {Prasanna Kumar Siddireddy},
   title   = {{The CMS ECAL Trigger and DAQ system: electronics auto-recovery and monitoring}},
   year    = {2018},
-  howpublished = {CMS CR -2018/084, arXiv:1806.09136 [physics.ins-det]}
+  howpublished = {CMS CR -2018/084}
 }
 
 @misc{CMSexperiment,
