--- a/Doc/KursinisDarbas.tex
+++ b/Doc/KursinisDarbas.tex
@@ -81,7 +81,7 @@
 \setlength\q{\dimexpr .5\textwidth -2\tabcolsep}
 
 \begin{document}
-\linenumbers
+%\linenumbers
 
 \begin{titlepage}
 \centering
@@ -363,7 +363,7 @@ begalybei (arba minus begalybei, kai $\theta=\ang{180}$).
 \subsubsection*{Skersinis impulsas ir skersinė energija}
 
 Kadangi, dalelių detektorius yra cilindriškai išdėstytas aplink protonų spindulį, dalelės impulso
-projekcijos į $z$ ašį nustatyti yra neįmanoma.
+projekcijos į cilindrinės koordinačių sistemos $z$ ašį nustatyti yra neįmanoma.
 Dėl šios priežasties šiuolaikiniuose dalelių detektoriuose, tokiuose kaip CERN CMS yra matuojama tik
 statmena $z$ ašiai dalelės impulso dedamoji arba šio judėjimo nulemtos kinetinės energijos dedamoji.
 Šie dydžiai yra vadinami skersiniu impulsu $\pT$ (angl.\ \textit{transverse momentum}) ir
@@ -1366,9 +1366,8 @@ Jų skaičiumi ir yra laikomas visas grafike matomas skirtumas tarp matavimo ir 
 Priešingus elektrinius krūvius turinčių elektrono ir miuono invariantinės masės histograma, pridėjus iš vienodo krūvio srities
 įvertintus $\QCD$ įvykius, vaizduojama \ref{fig:emuWQCD} paveiksle.
 Šiuo atveju skirtumas tarp matavimo ir modeliavimo, pridėjus $\QCD$ įvykius, siekia apie $8.0\%$.
-Nors, lyginant su \ref{fig:emuOS} pav. vaizduojamu atveju, skirtumas padidėjo, vėlesnysis rezultatas laikomas teisingesniu,
-nes įskaitomas didesnis procesų skaičius.
-Tikimasi, kad tai leis gauti teisingesnį rezultatą $\emu$ metodu skaičiuojant Drell-Yan proceso triukšmo įvykių skaičių.
+Iš įnešto sistemingo nuokrypio galima spręsti, kad tokia netikrų $\emu$ įvykių skaičiaus įvertinimo metodika turi trūkumų ir ją
+reikėtų patobulinti, arba pabandyti taikyti kitą metodiką.
 
 \subsection{Išmatuotas invariantinės masės pasiskirstymas}
 
@@ -1395,7 +1394,8 @@ Taikant $\emu$ metodą gautų įvykių skaičių neapibrėžtumai buvo įvertint
 \end{figure}
 
 \begin{figure}[H]
-	\includegraphics[width=\linewidth]{mumuMassEst_BIG.png}
+	\includegraphics[width=0.9\linewidth]{mumuMassEst_BIG.png}
+	\vspace{-0.4cm}
 	\caption{\label{fig:mumuEst} \small
 		Su Drell-Yan triukšmo procesais siejamos miuonų poros invariantinės masės pasiskirstymo histograma.
 		Viršutiniuose grafikuose spalvoti histogramų stulpeliai vaizduoja su skirtingais procesais siejamus modeliuotus įvykių
@@ -1405,6 +1405,7 @@ Taikant $\emu$ metodą gautų įvykių skaičių neapibrėžtumai buvo įvertint
 		Vaizduojami neapibrėžtumai -- tik statistiniai.
 	}
 \end{figure}
+\vspace{-0.4cm}
 
 \ref{fig:eeMassDataMCest} bei \ref{fig:mumuMassDataMCest} paveiksluose pateikiamos leptonų porų invariantinių masių
 histogramos, kuriose $\DYtau$, $\ttbar$, $tW$, $\tbarW$, $WW$, $WZ$ ir $ZZ$ procesų modeliuoti įverčiai yra pakeisti
@@ -1414,15 +1415,17 @@ Taip pat $\emu$ metodo pritaikymo rezultatai kartu su statistiniais neapibrėžt
 skaičiai visoje tirtoje invariantinės masės srityje, \ref{table:finalResults_Z} lentelėje -- $Z$ bozono rezonanso aplinkoje
 ($15<m_{ll}<3000$ GeV).
 Lyginant su vien tik iš modeliavimo įvertintą įvykių skaičių su gautuoju taikant $\emu$ metodą (lentelių 3-asis ir 4-asis stulpeliai),
-skirtumas tarp išmatuoto ir modeliavimu arba $\emu$ metodu gauto įverčio šiek tiek sumažėjo: $ee$ galutinės būsenos
-įvykiams nuo $2.54\%$ iki $2.43\%$, o $\mumu$ įvykiams -- nuo $1.01\%$ iki $0.92\%$.
-Šis rezultatas atrodo nežymus, nes $\emu$ metodu įvertinamas ne visų triukšmo įvykių skaičius, o svarbiausia --
+skirtumas tarp pilnutinio (suintegruoto visoje tirtoje invariantinės masės srityje) išmatuoto ir modeliavimu arba $\emu$ metodu gauto
+įverčio šiek tiek sumažėjo: $ee$ galutinės būsenos įvykiams nuo $2.54\%$ iki $2.43\%$, o $\mumu$ įvykiams -- nuo $1.01\%$ iki $0.92\%$.
+Šis pasikeitimas atrodo nežymus, nes $\emu$ metodu įvertinamas ne visų triukšmo įvykių skaičius, o svarbiausia --
 signalo srityje labai didelę dalį įvykių ir sudaro pats signalas: apie $98.5\%$ visų įvykių.
-Tai ypač smarkiai lemia įvykių skaičius $Z$ bozono rezonanso srityje ($60<m_{ll}<120$ GeV), kurioje Drell-Yan procesas
-visiškai dominuoja -- sudaro $99.2\%$ visų šioje srityje esančių įvykių.
+Vis dėlto, kadangi $\emu$ metodu įvertintas Drell-Yan triukšmo įvykių skaičius yra net $8\%$ mažesnis už modeliuotų triukšmo įvykių
+skaičių, galima manyti, kad $\emu$ metodas įvykių skaičių sumažino per smarkiai.
+Tokį įvykių skaičiaus pasikeitimą nulėmė išbandyta netikrų $\emu$ įvykių skaičiaus įvertinimo metodika, kuri šiuo atveju pasirodė netinkama.
 
 \begin{figure}
 	\includegraphics[width=\linewidth]{eeMassFinal_BIG.png}
+	\vspace{-0.8cm}
 	\caption{\label{fig:eeMassDataMCest} \small
 		Elektronų poros invariantinės masės pasiskirstymo histograma, kurioje, kur įmanoma, modeliuotų įvykių skaičius yra
 		pakeistas $\emu$ metodu įvertintu įvykių skaičiumi. 
@@ -1438,6 +1441,7 @@ visiškai dominuoja -- sudaro $99.2\%$ visų šioje srityje esančių įvykių.
 
 \begin{figure}
 	\includegraphics[width=\linewidth]{mumuMassFinal_BIG.png}
+	\vspace{-0.8cm}
 	\caption{\label{fig:mumuMassDataMCest} \small
 		Miuonų poros invariantinės masės pasiskirstymo histograma, kurioje, kur įmanoma, modeliuotų įvykių skaičius yra
 		pakeistas $\emu$ metodu įvertintu įvykių skaičiumi. 
@@ -1454,12 +1458,9 @@ visiškai dominuoja -- sudaro $99.2\%$ visų šioje srityje esančių įvykių.
 Drell-Yan proceso triukšmo įvykių skaičiaus neapibrėžtumas, lyginant su modeliavimu, išaugo daugiau negu $50\%$.
 Taip yra dėl to, kad įvykių skaičius, apskaičiuojamas $\emu$ metodu yra išvestinis dydis, gaunamas iš \eqref{eq:emuFinal}
 formulės, o jo neapibrėžtumas įvertinamas naudojantis \eqref{eq:DerUnc} formule.
-Vis dėlto, įvykių skaičiaus pokytis, gautas pereinant nuo modeliuoto prie $\emu$ metodu gauto rezultato, yra reikšmingesnis
-už neapibrėžtumus, tad galima manyti, kad $\emu$ metodo taikymas buvo naudingas.
 
-Nors $\emu$ metodo naudojimas leido patikslinti Drell-Yan proceso triukšmo įvykių skaičių, tačiau ateityje būtų
-naudinga likusių triukšmo procesų, ypatingai $\WJets$ ir $\QCD$, įvykių skaičių įvertinti kitais matavimu grįstais
-metodais.
+Nors $\emu$ metodas leido įvertinti Drell-Yan proceso triukšmo įvykių skaičių, ateityje metodiką reikės patobulinti.
+Tikslingiausia būtų pabandyti $\emu$ triukšmo įvykių skaičių įvertinti kitais matavimu grįstais metodais.
 
 \begin{centering}
 \begin{table}[H]
@@ -1468,7 +1469,7 @@ metodais.
 	\hline
 	
 	\multirow{2}{8em}{\centering Įvykiai} &
-	\multirow{2}{7em}{\centering CMS užfiksuotų įvykių skaičius} &
+	\multirow{2}{8em}{\centering CMS užfiksuotų įvykių skaičius} &
 	\multirow{2}{9em}{\centering Modeliuotų įvykių skaičius} &
 	\multirow{2}{10em}{\centering Įvykių skaičius, gautas taikant $e\mu$ metodą} \\
 	
@@ -1476,31 +1477,31 @@ metodais.
 	\hline \hline
 	
 	\multirow{2}{8em}{\centering $e\mu$} &
-	\multirow{2}{7em}{\centering $3.110 \cdot 10^5 \pm 642$} &
-	\multirow{2}{9em}{\centering $3.359 \cdot 10^5 \pm 544$ } &
+	\multirow{2}{8em}{\centering $(3.110 \pm 0.006) \cdot 10^5$} &
+	\multirow{2}{9em}{\centering $(3.359 \pm 0.005) \cdot 10^5$ } &
 	\multirow{2}{5em}{\centering \textendash }\\
 	
  	& & & \\
 	\hline
 	
 	$ee$ ($\WW$, $tW$, $\bar{t}W$, &
-	\multirow{2}{7em}{\centering\textendash} &
-	\multirow{2}{9em}{\centering $1.883 \cdot 10^5 \pm 409$} &
-	\multirow{2}{9em}{\centering$\mathbf{1.749 \cdot 10^5} \pm 616$} \\
+	\multirow{2}{8em}{\centering\textendash} &
+	\multirow{2}{9em}{\centering $(1.883 \pm 0.004) \cdot 10^5$} &
+	\multirow{2}{9em}{\centering$\mathbf{(1.749 \pm 0.006) \cdot 10^5}$} \\
 	
 	$t\bar{t}$, $\DYtau$) & & & \\
 	\hline
 	
 	\multirow{2}{8em}{\centering $ee$ (visi procesai)} &
-	\multirow{2}{7em}{\centering $1.311 \cdot 10^7 \pm 3620$} &
-	\multirow{2}{10em}{\centering $1.344 \cdot 10^7 \pm 7665$}
-	&\multirow{2}{10em}{\centering $\mathbf{1.343 \cdot 10^7} \pm 7665$} \\
+	\multirow{2}{8em}{\centering $(1.311 \pm 0) \cdot 10^7$} &
+	\multirow{2}{10em}{\centering $(1.344 \pm 0.001) \cdot 10^7$}
+	&\multirow{2}{10em}{\centering $\mathbf{(1.343 \pm 0.001) \cdot 10^7}$} \\
 	
  	& & & \\
 	\hline
 
 	\multirow{2}{8em}{\centering $N_{ee}/N_{ee}^{\mathrm{Obs.}}$} &
-	\multirow{2}{7em}{\centering 1} &
+	\multirow{2}{8em}{\centering \textendash} &
 	\multirow{2}{10em}{\centering $1.0254 \pm 0.0006$} &
 	\multirow{2}{10em}{\centering $1.0243 \pm 0.0006$} \\
 	
@@ -1508,23 +1509,23 @@ metodais.
 	\hline
 
 	$\mumu$ ($\WW$, $tW$, $\bar{t}W$, &
-	\multirow{2}{7em}{\centering\textendash} &
-	\multirow{2}{9em}{\centering $2.931 \cdot 10^5 \pm 527$} &
-	\multirow{2}{9em}{\centering$\mathbf{2.724 \cdot 10^5} \pm 910$} \\
+	\multirow{2}{8em}{\centering\textendash} &
+	\multirow{2}{9em}{\centering $(2.931 \pm 0.005) \cdot 10^5$} &
+	\multirow{2}{9em}{\centering$\mathbf{(2.724 \pm 0.009) \cdot 10^5}$} \\
 	
 	$t\bar{t}$, $\DYtau$) & & & \\
 	\hline
 	
 	\multirow{2}{8em}{\centering $\mumu$ (visi procesai)} &
-	\multirow{2}{7em}{\centering $2.292 \cdot 10^7 \pm 4787$} &
-	\multirow{2}{10em}{\centering $2.315 \cdot 10^7 \pm 10372$}
-	&\multirow{2}{10em}{\centering $\mathbf{2.313 \cdot 10^7} \pm 10382$} \\
+	\multirow{2}{8em}{\centering $(2.292 \pm 0) \cdot 10^7$} &
+	\multirow{2}{10em}{\centering $(2.315 \pm 0.001) \cdot 10^7$}
+	&\multirow{2}{10em}{\centering $\mathbf{(2.313 \pm 0.001) \cdot 10^7}$} \\
 	
  	& & & \\
 	\hline
 	
 	\multirow{2}{8em}{\centering $N_{\mumu}/N_{\mumu}^{\mathrm{Obs.}}$} &
-	\multirow{2}{7em}{\centering 1} &
+	\multirow{2}{8em}{\centering \textendash} &
 	\multirow{2}{10em}{\centering $1.0101 \pm 0.0005$} &
 	\multirow{2}{10em}{\centering $1.0092 \pm 0.0005$} \\
 	
@@ -1544,7 +1545,7 @@ metodais.
 	\hline
 	
 	\multirow{2}{8em}{\centering Įvykiai} &
-	\multirow{2}{7em}{\centering CMS užfiksuotų įvykių skaičius} &
+	\multirow{2}{8em}{\centering CMS užfiksuotų įvykių skaičius} &
 	\multirow{2}{9em}{\centering Modeliuotų įvykių skaičius} &
 	\multirow{2}{10em}{\centering Įvykių skaičius, gautas taikant $e\mu$ metodą} \\
 	
@@ -1552,31 +1553,31 @@ metodais.
 	\hline \hline
 	
 	\multirow{2}{8em}{\centering $e\mu$} &
-	\multirow{2}{7em}{\centering $1.357 \cdot 10^5 \pm 430$} &
-	\multirow{2}{9em}{\centering $1.449 \cdot 10^5 \pm 381$ } &
+	\multirow{2}{8em}{\centering $(1.357 \pm 0.004) \cdot 10^5$} &
+	\multirow{2}{9em}{\centering $(1.449 \pm 0.004) \cdot 10^5$ } &
 	\multirow{2}{5em}{\centering \textendash }\\
 	
  	& & & \\
 	\hline
 	
 	$ee$ ($\WW$, $tW$, $\bar{t}W$, &
-	\multirow{2}{7em}{\centering\textendash} &
+	\multirow{2}{8em}{\centering\textendash} &
 	\multirow{2}{9em}{\centering $92178 \pm 288$} &
-	\multirow{2}{9em}{\centering$\mathbf{86510} \pm 455$} \\
+	\multirow{2}{9em}{\centering $\mathbf{86510} \pm 455$} \\
 	
 	$t\bar{t}$, $\DYtau$) & & & \\
 	\hline
 	
 	\multirow{2}{8em}{\centering $ee$ (visi procesai)} &
-	\multirow{2}{7em}{\centering $1.257 \cdot 10^7 \pm 3546$} &
-	\multirow{2}{10em}{\centering $1.290 \cdot 10^7 \pm 7453$}
-	&\multirow{2}{10em}{\centering $\mathbf{1.289 \cdot 10^7} \pm 7456$} \\
+	\multirow{2}{8em}{\centering $(1.257 \pm 0) \cdot 10^7 $} &
+	\multirow{2}{10em}{\centering $(1.290 \pm 0.001) \cdot 10^7$} &
+	\multirow{2}{10em}{\centering $\mathbf{(1.289 \pm 0.001) \cdot 10^7}$} \\
 	
  	& & & \\
 	\hline
 
 	\multirow{2}{8em}{\centering $N_{ee}/N_{ee}^{\mathrm{Obs.}}$} &
-	\multirow{2}{7em}{\centering 1} &
+	\multirow{2}{8em}{\centering\textendash} &
 	\multirow{2}{10em}{\centering $1.0262 \pm 0.0006$} &
 	\multirow{2}{10em}{\centering $1.0255 \pm 0.0006$} \\
 	
@@ -1584,23 +1585,23 @@ metodais.
 	\hline
 
 	$\mumu$ ($\WW$, $tW$, $\bar{t}W$, &
-	\multirow{2}{7em}{\centering\textendash} &
-	\multirow{2}{9em}{\centering $1.469 \cdot 10^5 \pm 374$} &
-	\multirow{2}{9em}{\centering$\mathbf{1.379 \cdot 10^5} \pm 686$} \\
+	\multirow{2}{8em}{\centering\textendash} &
+	\multirow{2}{9em}{\centering $(1.469 \pm 0.004) \cdot 10^5$} &
+	\multirow{2}{9em}{\centering$\mathbf{(1.379 \pm 0.007) \cdot 10^5}$} \\
 	
 	$t\bar{t}$, $\DYtau$) & & & \\
 	\hline
 	
 	\multirow{2}{8em}{\centering $\mumu$ (visi procesai)} &
-	\multirow{2}{7em}{\centering $2.201 \cdot 10^7 \pm 4691$} &
-	\multirow{2}{10em}{\centering $2.223 \cdot 10^7 \pm 9800$}
-	&\multirow{2}{10em}{\centering $\mathbf{2.222 \cdot 10^7} \pm 9806$} \\
+	\multirow{2}{8em}{\centering $(2.201 \pm 0) \cdot 10^7$} &
+	\multirow{2}{10em}{\centering $(2.223 \pm 0.001) \cdot 10^7$} &
+	\multirow{2}{10em}{\centering $\mathbf{(2.222 \pm 0.001) \cdot 10^7}$} \\
 	
  	& & & \\
 	\hline
 	
 	\multirow{2}{8em}{\centering $N_{\mumu}/N_{\mumu}^{\mathrm{Obs.}}$} &
-	\multirow{2}{7em}{\centering 1} &
+	\multirow{2}{8em}{\centering \textendash} &
 	\multirow{2}{10em}{\centering $1.0100 \pm 0.0005$} &
 	\multirow{2}{10em}{\centering $1.0095 \pm 0.0005$} \\
 	
@@ -1617,16 +1618,13 @@ metodais.
 \clearpage
 \section*{Išvados} \addcontentsline{toc}{section}{Išvados}
 \begin{enumerate}
-	\item Duomenų rinkinių, talpinančių vien tik atrankos kriterijus tenkinančius protonų susidūrimų įvykius, sukūrimas
-	gerokai sutrumpina tolimesnės duomenų analizės laiką bei supaprastina duomenų saugojimą.
-	\item Pataisų, įskaitančių eksperimento sąlygų (protonų susidūrimų tankio pasiskirstymų, trigerių, dalelių atkūrimo ir
-	atpažinimo, miuonų trajektorijos atskirumo įvertinimo efektyvumų, elektronų energijos bei miuonų skersinio impulso
-	matavimo skalių) nesutapimus tarp matavimo ir modeliavimo padeda sumažinti atranką praeinančių eksperimentinių ir
-	modeliuotų įvykių skaičiaus neatitikimus -- nuo $15.1\%$ iki $2.5\%$ $ee$ įvykiams ir nuo $6.5\%$ iki $1.0\%$ $\mumu$ įvykiams.
-	\item Drell-Yan proceso triukšmo įvykių skaičius, įvertintas $\emu$ metodu, yra $7\%$ mažesnis už modeliuotą triukšmo
-	įvykių skaičių, o pilnutinis įvykių skaičiaus įvertis šiek tiek priartėjo prie eksperimentinio rezultato.
-	Taigi, $\emu$ metodo taikymas yra naudingas.
-	\item Iš matavimo įvertinus netikrų $\emu$ įvykių skaičių galima gauti realistiškesnį $\emu$ metodo įvertį.
+	\item Duomenų rinkinių sukūrimas, saugant tik atranką praėjusius įvykius, gerokai sutrumpina tolimesnės duomenų analizės
+	laiką bei supaprastina duomenų saugojimą;
+	\item Į eksperimento ir modeliavimo sąlygų nesutapimus atsižvelgiančios pataisos padeda sumažinti atranką praeinančių
+	išmatuotų ir modeliuotų įvykių skaičiaus neatitikimus;
+	\item Iš matavimo duomenų įvertinus netikrus $\emu$ įvykius galima geriau įvertinti $\emu$ įvykių skaičių, tačiau pritaikytas
+	metodas nepasiteisino ir turi būti peržiūrėtas;
+	\item $\emu$ metodas leidžia įvertinti Drell-Yan proceso triukšmo įvykių skaičių, bet galutinę metodiką dar reikia patobulinti.
 \end{enumerate}
 
 \clearpage
