--- a/OR_2019/Abstract_Ambrozas_Juodagalvis.tex
+++ b/OR_2019/Abstract_Ambrozas_Juodagalvis.tex
@@ -94,7 +94,7 @@ CMS experiment, CMS-CR-2017-267 (2017).
 collisions at $\sqrt{s}=8$ TeV, Eur. Phys. J. C \textbf{75} 147 (2015).
 
 \bibitem{DY8ATLAS}ATLAS Collaboration, Measurement of the triple-differential Drell-Yan cross section in $pp$ collisions at $\sqrt{s}=8$ TeV,
-Eur.\ Phys.\ J.\ C \textbf{75}, 147 (2015).
+JHEP \textbf{12}, 059 (2017).
 
 \bibitem{DY7}CMS Collaboration, Measurement of the differential and double-differential Drell-Yan cross sections in proton-proton collisions
 at $\sqrt{s}=7$ TeV, JHEP \textbf{12}, 030 (2013).
