OR poster very final

--- a/OR_2019/Poster/Ambrozas_Juodagalvis_OpenReadings2019.tex
+++ b/OR_2019/Poster/Ambrozas_Juodagalvis_OpenReadings2019.tex
@@ -392,9 +392,8 @@ Systematic uncertainty evaluations should be made after including both of the su
 \end{centering}
 \vspace{0.5cm}
 
-\noindent The presented work could have not been done without student's scientific practise project (no. 09.3.3-LMT-K-712-10-0128),
-funded from EU Structural Funds.
-The work was made in collaboration with researchers from Seoul National University and University of Nebraska-Lincoln.
+\noindent This research was funded by a grant (No. 09.3.3-LMT-K-712-10-0128) from the Research Council of Lithuania.
+This research was performed in cooperation with researchers from Seoul National University and University of Nebraska-Lincoln.
 
 \begin{thebibliography}{References}
 	\vspace{-0.5cm}
